--- a/style.css
+++ b/style.css
@@ -1,75 +1,138 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html {
-    height: 100%;
-    width: 100%;
-    }
-    
-body {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-    display: grid;
-    grid-template-rows: 2fr 10fr;
+  height: 100%;
+  width: 100%;
 }
 
-header, footer {
-    background-color: #4682b4;
+body {
+  display: grid;
+  grid-template-rows: 2fr 10fr;
+}
+
+header,
+footer {
+  background-color: #4682b4;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  position: relative;
 }
 
 header h1 {
-    color: #f0f0f0;
+  color: #f0f0f0;
+  text-align: center;
 }
 
+header svg {
+  position: absolute;
+  right: 10px;
+}
+
+/* header div {
+    display: flex;
+    align-items: center;
+} */
+
 main {
-    background-color: #f0f0f0;
-    box-sizing: content-box;
+  background-color: #f0f0f0;
+  box-sizing: content-box;
 }
 
 .search-bar-form {
-    background-color: #f0f0f0;
-    display: flex;
-    width: 80ch;
-    min-height: 40px;
-    position: relative;
-    border-radius: 5px;
-    padding: 10px;
+  background-color: #f0f0f0;
+  display: flex;
+  width: 80ch;
+  min-height: 40px;
+  position: relative;
+  border-radius: 5px;
+  padding: 10px;
 }
 
 .search-bar-input {
-    position: relative;
-    background-color: transparent;
-    border: none;
+  position: relative;
+  background-color: transparent;
+  border: none;
 }
 
 .search-bar-input:focus {
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 }
 
 .search-bar-button {
-    cursor: pointer;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    z-index: 2;
-    background-color: transparent;
-    border: none;
-    outline: none;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 2;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
+.filter-icon {
+  cursor: pointer;
+}
+
+.filter-dialog {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 2px solid #a9a9a9;
+  padding: 30px;
+}
+
+.dialog-fields {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.dialog-field {
+  display: flex;
+  flex-direction: column;
+  min-width: 200px;
+  gap: 5px;
+}
+
+dialog button,
+.dialog-field input,
+.dialog-field select {
+  min-height: 30px;
+  background-color: transparent;
+  border: 1px solid #a9a9a9;
+  border-radius: 4px;
+}
+
+.dialog-field select, .dialog-field input {
+    padding: 5px;
+}
+
+.dialog-button {
+  width: 100%;
+  background-color: #4682b4;
+  border: none;
+  color: #f0f0f0;
+  cursor: pointer;
+}
+
+.dialog-button:hover {
+    background-color: #2d79b8;
+}
