--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header {
     align-items: center;
     gap: 15px;
     position: relative;
+    padding: 20px;
 }
 
 header h1 {
@@ -155,12 +156,51 @@ dialog button,
 
 .list-news li {
     display: flex;
+    gap: 15px;
+    height: 100%;
     width: 100%;
     list-style: none;
     margin-top: 20px;
 }
 
-.container-news-image {
-    width: 40%;
+.news-image {
+    width: 30%;
     height: 100%;
+}
+
+.container-news-image img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.link-news-details {
+    width: 100%;
+    height: 30px;
+    display: block;
+    border: none;
+}
+
+.link-news-details button {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    background-color: #d6d6d6;
+}
+
+.link-news-details button:hover {
+    background-color: #c0c0c0;
+}
+
+.container-news-content {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.container-news-tags {
+    display: flex;
+    justify-content: space-between;
 }
