--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ body {
 
 body {
     display: grid;
-    grid-template-rows: 2fr 10fr;
+    grid-template-rows: auto 1fr auto;
+    gap: 10px;
+    background-color: #f0f0f0;
 }
 
 header,
@@ -53,6 +55,14 @@ main {
     align-items: center;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    color: #f0f0f0;
+    font-size: 18px;
+    padding: 40px;
+}
+
 .search-bar-form {
     background-color: #f0f0f0;
     display: flex;
@@ -67,6 +77,7 @@ main {
     position: relative;
     background-color: transparent;
     border: none;
+    width: 95%;
 }
 
 .search-bar-input:focus {
@@ -216,12 +227,17 @@ li {
     gap: 5px;
 }
 
+.list-pages li {
+    border: none;
+}
+
 .list-pages li button {
     background-color: transparent;
     border: 1px solid #4682b4;
     color: #4682b4;
     font-weight: bold;
-    padding: 8px 12px;
+    padding: 10px 15px;
+    border-radius: 5px;
     cursor: pointer;
 }
 
@@ -234,4 +250,9 @@ li {
 .list-pages li button[data-current="true"] {
     background-color: #4682b4;
     color: #f0f0f0;
+}
+
+.container-editorials {
+    display: flex;
+    gap: 10px;
 }
