--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ header h1 {
 
 header svg {
     position: absolute;
-    right: 10px;
+    right: 15px;
+    bottom: 25px;
 }
 
 main {
@@ -111,6 +112,13 @@ footer {
     gap: 10px;
     border: 2px solid #a9a9a9;
     padding: 30px;
+}
+
+.filter-number-container {
+    position: absolute;
+    right: 10px;
+    bottom: 20px;
+    color: #f0f0f0;
 }
 
 .dialog-fields {
